--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "gulp-typescript": "^2.13.0",
     "gulp-util": "^3.0.7",
     "jquery": "^2.2.3",
-    "lodash": "^4.11.1",
+    "lodash": "^4.11.2",
     "merge-stream": "^1.0.0",
     "mocha": "^2.4.5",
     "mocha-unfunk-reporter": "^0.4.0",
@@ -91,7 +91,7 @@
     "rxjs": "^5.0.0-beta.7",
     "semver": "^5.0.3",
     "through2": "^2.0.1",
-    "tslint": "^3.8.1",
+    "tslint": "^3.9.0",
     "typescript": "^1.8.10",
     "typings": "^0.8.1"
   },
@@ -109,6 +109,11 @@
     "linter-plus-self": {
       "versions": {
         "0.1.0": "consumeLinter"
+      }
+    },
+    "linter-indie": {
+      "versions": {
+        "1.0.0": "consumeIndieLinter"
       }
     }
   },
@@ -137,7 +142,7 @@
     "advanced-open-file"
   ],
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.7",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-3": "^6.5.0"
   }
