--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omnisharp-atom",
-  "main": "./lib/omnisharp-atom.js",
+  "main": "./index.js",
   "atomTestRunner": "./spec/test-runner",
   "version": "0.30.0",
   "description": "Brings the wonderful OmniSharp server to powercharge Atom's C# development experience",
@@ -54,26 +54,30 @@
     "atom-sharper.cson"
   ],
   "scripts": {
-    "postinstall": "./node_modules/.bin/gulp npm-postinstall",
     "prepublish": "typings install && gulp npm-prepublish"
   },
   "dependencies": {
     "atom-package-deps": "^4.0.1",
     "atom-space-pen-views": "^2.2.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-3": "^6.3.13",
-    "chai": "^3.5.0",
-    "del": "^2.2.1",
     "entities": "^1.1.1",
     "escape-html": "^1.0.1",
     "fastdom": "^1.0.3",
     "font-awesome": "^4.6.3",
-    "fs-plus": "^2.9.1",
     "fuzzaldrin": "^2.1.0",
-    "generator-aspnet": "^0.1.0",
-    "glob": "^7.0.5",
+    "generator-aspnet": "^0.2.0",
     "globby": "^5.0.0",
+    "jquery": "^3.0.0",
+    "lodash": "^4.13.1",
+    "omnisharp-client": "^5.0.11",
+    "rxjs": "^5.0.0-beta.9",
+    "semver": "^5.0.3"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-3": "^6.11.0",
+    "chai": "^3.5.0",
+    "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-sourcemap": "^1.0.1",
@@ -81,19 +85,13 @@
     "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^2.13.6",
     "gulp-util": "^3.0.7",
-    "jquery": "^3.0.0",
-    "lodash": "^4.13.1",
     "merge-stream": "^1.0.0",
     "mocha": "^2.5.3",
     "mocha-unfunk-reporter": "^0.4.0",
-    "omnisharp-client": "^5.0.11",
-    "rimraf": "^2.5.2",
-    "rxjs": "^5.0.0-beta.9",
-    "semver": "^5.0.3",
     "through2": "^2.0.1",
-    "tslint": "^3.11.0",
+    "tslint": "^3.12.1",
     "typescript": "^1.8.10",
-    "typings": "^1.3.0"
+    "typings": "^1.3.1"
   },
   "consumedServices": {
     "status-bar": {
@@ -140,10 +138,5 @@
     "linter",
     "json-schema",
     "advanced-open-file"
-  ],
-  "devDependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-3": "^6.5.0"
-  }
+  ]
 }
