--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "globby": "^5.0.0",
     "jquery": "^3.0.0",
     "lodash": "^4.13.1",
+    "npm": "^3.10.2",
     "omnisharp-client": "^5.0.11",
     "rxjs": "^5.0.0-beta.9",
     "semver": "^5.0.3"
