Fixed an issue where we cant properly load all features

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "declaration": false,
     "noImplicitAny": true,
     "removeComments": true,
+    "noEmitOnError": false,
     "noLib": false,
     "preserveConstEnums": true,
     "experimentalDecorators": true,
