--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "jquery": "^3.0.0",
     "lodash": "^4.13.1",
     "omnisharp-client": "^5.0.11",
-    "rxjs": "^5.0.0-beta.9",
+    "rxjs": "5.0.0-beta.10",
     "semver": "^5.0.3"
   },
   "devDependencies": {
@@ -133,9 +133,6 @@
     }
   },
   "package-deps": [
-    "atom-yeoman",
-    "linter",
-    "json-schema",
-    "advanced-open-file"
+    "linter"
   ]
 }
