--- a/package.json
+++ b/package.json
@@ -57,41 +57,42 @@
     "prepublish": "typings install && gulp npm-prepublish"
   },
   "dependencies": {
-    "atom-package-deps": "^4.0.1",
+    "atom-package-deps": "^4.3.1",
     "atom-space-pen-views": "^2.2.0",
     "entities": "^1.1.1",
-    "escape-html": "^1.0.1",
-    "fastdom": "^1.0.3",
-    "font-awesome": "^4.6.3",
+    "escape-html": "^1.0.3",
+    "fastdom": "^1.0.5",
+    "font-awesome": "^4.7.0",
     "fuzzaldrin": "^2.1.0",
-    "globby": "^5.0.0",
-    "jquery": "^3.0.0",
-    "lodash": "^4.13.1",
-    "omnisharp-client": "^5.0.12",
-    "rxjs": "5.0.0-beta.10",
-    "semver": "^5.0.3",
+    "globby": "^6.1.0",
+    "jquery": "^3.1.1",
+    "lodash": "^4.16.6",
+    "omnisharp-client": "^5.2.0",
+    "rxjs": "5.0.0-rc.2",
+    "semver": "^5.3.0",
     "ts-disposables": "^2.2.3"
   },
   "devDependencies": {
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-3": "^6.11.0",
+    "@types/chai": "^3.4.34",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0",
     "chai": "^3.5.0",
-    "del": "^2.2.1",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-sourcemap": "^1.0.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^5.0.0",
-    "gulp-typescript": "^2.13.6",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-tslint": "^6.1.3",
+    "gulp-typescript": "^3.1.2",
     "gulp-util": "^3.0.7",
     "merge-stream": "^1.0.0",
-    "mocha": "^2.5.3",
+    "mocha": "^3.1.2",
     "mocha-unfunk-reporter": "^0.4.0",
     "through2": "^2.0.1",
-    "tslint": "^3.12.1",
-    "typescript": "^2.0.0",
-    "typings": "^1.3.1"
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.8",
+    "typings": "^1.5.0"
   },
   "consumedServices": {
     "status-bar": {
